Hardening pass: safety fixes, shared utilities, VM configurator, and test coverage
Phase 1 — Safety:
- Delete root scratch files FindClass.java and TestRun.java
- Add reusable isEditorAvailable() guard in TomcatConfigurationEditor
  for all deferred invokeLater callbacks (prevents disposal race)
- Replace silent catches in ArtifactSelectionHandler with logged
  fallbacks (detectPomModuleNames, resolveDeploymentType)
- Narrow TomcatProcessHandler.closeQuietly() from Exception to IOException

Phase 2 — Coverage:
- TomcatServerManagerStateTest: loadState round-trip, snapshot
  immutability, installation detection, generateUniqueName conflicts
- TomcatJavaParametersBuilderTest: pre-resolved ports, internal/external
  conflicts, JMX/HTTPS/AJP conditional resolution
- TomcatVmOptionsConfiguratorTest: JMX/HTTPS params, JDK 8 vs 9+
  --add-opens, user VM options preserved
- ArtifactMatchingUtilsTest: exact, case-insensitive, output path,
  base module name matching
- ArtifactSelectionHandlerTest: happy-path and fallback type resolution
- ProjectArtifactDetectorTest + PlatformTest: web artifact detection,
  module discovery
- TomcatRunConfigurationProducerPlatformTest: config creation, skip
  non-web, no-server guard, docBase matching

Phase 3 — Refactor:
- Extract ArtifactMatchingUtils from duplicate findMatchingArtifact in
  TomcatRunConfiguration and TomcatConfigurationEditor
- Extract TomcatVmOptionsConfigurator from TomcatJavaParametersBuilder
  for testable VM/system-property assembly
- Rename Enterprise/Professional producer methods to purpose-based names
- Remove dead buildEnvironmentVariables() and duplicate --add-opens
  constants from DynamicTomcatEnvironment